--- a/assets/front_end/modern/css/custom.css
+++ b/assets/front_end/modern/css/custom.css
@@ -897,7 +897,7 @@ section #progressbar div.active:after {
         /* width: 187px !important; */
         height: 75px !important;
     }
-    
+
 }
 
 @media only screen and (min-width: 1000px) {
@@ -1051,7 +1051,7 @@ section #progressbar div.active:after {
     position: fixed;
     left: 20px;
     bottom: 65px;
-    z-index: 1;
+    z-index: 9999;
     width: 45px;
     height: 45px;
     /* box-shadow: rgba(99, 99, 99, 0.2) 0px 0px 3px 0px; */
@@ -1671,11 +1671,22 @@ section #progressbar div.active:after {
     border-radius: 26px;
 }
 
+.fixed-icon {
+    position: fixed;
+    right: 15px;
+    bottom: 15px;
+    z-index: 99999;
+}
+
+.progress-wrap {
+    position: initial !important;
+}
+
 #chat-button {
     transition: all 0.35s ease-in-out;
-    position: fixed;
+    /* position: fixed;
     bottom: 32px;
-    right: 83px;
+    right: 83px; */
     padding: 8px 14px;
     background-color: #3cc766;
     color: #fff;
@@ -1698,6 +1709,23 @@ section #progressbar div.active:after {
 #floating_chat_view {
     margin: 22px;
 }
+
+.seller-profile-card {
+    border-radius: 50%;
+    width: 150px;
+    /* background-color: antiquewhite; */
+    height: 150px;
+
+}
+
+.seller-profile-card img{
+    max-width: 100% !important;
+    max-height: 100% !important;
+    object-fit: cover !important;
+    border-radius: 50%;
+}
+
+
 
 
 .theme-krajee-svg .filled-stars .krajee-icon-star {
